<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.RestaurantCovidInfoFragment">

    <ProgressBar
        android:id="@+id/covid_fragment_loading_spinner"
        android:layout_height="match_parent"
        tools:visibility="gone"
        android:layout_width="match_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/covid_fragment_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/covid_info_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
