...
        <TextView
            android:id="@+id/covid_rate"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:gravity="end"
            tools:text = "High COVID rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/restaurant_name"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingEnd="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
...
